Update an entire table when part of it changes.

Otherwise rows and cells aren't renumbered properly. We can possibly make
this more efficient in the future by only computing cell row and column
indexes downstream, but for now this is necessary.

Bug: 864012
Change-Id: I270481c78ee6e10bdf0140c5f4d221af3918c0fc
Reviewed-on: https://chromium-review.googlesource.com/1142392
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Alice Boxhall <aboxhall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576423}
Former-commit-id: cd0d9861ee13bec2f79b6be872f8e7aa3ab759f8